--- a/src/app/app-main/app-main.component.html
+++ b/src/app/app-main/app-main.component.html
@@ -1,6 +1,10 @@
-<div style="display: flex; direction: column; width: 100%">
+<div style="display: flex; flex-direction: column; width: 100%">
 
     <div style="flex: 1">
         <app-topbar></app-topbar>
+    </div>
+
+    <div style="flex: 1">
+        <app-slider-image></app-slider-image>
     </div>
 </div>
