--- a/src/app/app-main/app-main.component.html
+++ b/src/app/app-main/app-main.component.html
@@ -7,4 +7,8 @@
     <div style="flex: 1">
         <app-slider-image></app-slider-image>
     </div>
+
+    <div style="flex: 1">
+        <app-about></app-about>
+    </div>
 </div>
