--- a/src/app/app-main/app-main.component.html
+++ b/src/app/app-main/app-main.component.html
@@ -8,7 +8,15 @@
         <app-slider-image></app-slider-image>
     </div>
 
-    <div style="flex: 1">
-        <app-about></app-about>
+    <div style="flex: 1; margin-top: 50px; margin-left: 50px; margin-right: 50px;">
+        <div style="display: flex; flex-direction: column; width: 100%">
+            <div style="flex: 1">
+                <app-about></app-about>
+            </div>
+
+            <div style="flex: 1; margin-top: 50px;">
+                <app-skill></app-skill>
+            </div>
+        </div>
     </div>
 </div>
