--- a/src/app/app-main/skill/skill.component.html
+++ b/src/app/app-main/skill/skill.component.html
@@ -1,3 +1,63 @@
-<p>
-  skill works!
-</p>
+<h1 align="center">Professional Skills</h1>
+
+<mat-card>
+  <!-- <mat-card-title align="center">Professional Skills</mat-card-title> -->
+  <mat-card-content style="display: flex; flex-direction: row; width: 100%">
+    <div style="flex: 5; margin-right: 20px;">
+      <div style="display: flex; flex-direction: column; width: 100%">
+
+        <div style="flex: 1">
+          <h2 class="example-h2">TYPESCRIPT</h2>
+          <mat-slider [ngModel]="professionalSkill.typescript"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">ANGULAR</h2>
+          <mat-slider [ngModel]="professionalSkill.angular"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">DOCKER</h2>
+          <mat-slider [ngModel]="professionalSkill.docker"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">NGRX</h2>
+          <mat-slider [ngModel]="professionalSkill.ngRx"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">EXPRESS</h2>
+          <mat-slider [ngModel]="professionalSkill.express"> </mat-slider>
+        </div>
+
+      </div>
+    </div>
+
+    <div style="flex: 5; margin-left: 20px;">
+      <div style="display: flex; flex-direction: column; width: 100%">
+
+        <div style="flex: 1">
+          <h2 class="example-h2">GIT</h2>
+          <mat-slider [ngModel]="professionalSkill.git"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">RXJS</h2>
+          <mat-slider [ngModel]="professionalSkill.rxJs"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">HTML</h2>
+          <mat-slider [ngModel]="professionalSkill.html"> </mat-slider>
+        </div>
+
+        <div style="flex: 1">
+          <h2 class="example-h2">CSS</h2>
+          <mat-slider [ngModel]="professionalSkill.css"> </mat-slider>
+        </div>
+      </div>
+
+    </div>
+  </mat-card-content>
+</mat-card>
