--- a/src/app/app-main/work-experience/work-experience.component.html
+++ b/src/app/app-main/work-experience/work-experience.component.html
@@ -1,3 +1,19 @@
-<p>
-  work-experience works!
-</p>
+<h1 align="center">Work Experience</h1>
+
+<div *ngFor="let experience of experiences">
+  <mat-card style="padding: 0px; margin-bottom: 10px;">
+    <mat-card-content style="display: flex; flex-direction: row; width: 100%">
+      <div class="small-box" style="flex: 3;">
+        <h4>{{experience.period}}</h4>
+        <h2>{{experience.companyName}}</h2>
+      </div>
+
+      <div style="flex: 7">
+        <div class="big-box" style="flex: 3;">
+          <h2>{{experience.position}}</h2>
+          <p>{{experience.description}}</p>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
