--- a/src/app/app-main/app-main.component.html
+++ b/src/app/app-main/app-main.component.html
@@ -14,9 +14,18 @@
                 <app-about></app-about>
             </div>
 
-            <div style="flex: 1; margin-top: 50px;">
+            <div style="flex: 1; margin-top: 100px;">
                 <app-skill></app-skill>
             </div>
+
+            <div style="flex: 1; margin-top: 100px;">
+                <app-portfolio></app-portfolio>
+            </div>
+
+            <div style="flex: 1; margin-top: 100px;">
+                <app-work-experience></app-work-experience>
+            </div>
+
         </div>
     </div>
 </div>
